--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,13 +3,17 @@ on:
   pull_request:
     branches:
       - develop
+
 jobs:
   check-application:
+    strategy:
+      matrix:
+        go: ['1.23', '1.24']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2 # download the project to vm
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.24.2
+          go-version: ${{  matrix.go }}
       - run: go test
       - run: go run math.go
