--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,14 +6,23 @@ on:
 
 jobs:
   check-application:
-    strategy:
-      matrix:
-        go: ['1.23', '1.24']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2 # download the project to vm
       - uses: actions/setup-go@v2
         with:
-          go-version: ${{  matrix.go }}
+          go-version: 1.24
       - run: go test
       - run: go run math.go
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: guimartiins/ci-module-go:latest
