ci: :bug: fix tags on dockerhub

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,4 +31,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: guimartiins/ci-module-go:latest
+          tags: castmoon/ci-module-go:latest
